--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,41 +1,54 @@
-<!--Rodapé-->
-<div class="container-fluid ">
-    <footer class="page-footer">
-        <hr cl>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 d-flex justify-content-center">
-                    <h4 class="">Siga-nos em nossas redes sociais</h4>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 d-flex justify-content-center">
-                    <ul class="social-network">
-                        <li>
-                            <a href="https://www.facebook.com/guhh.rabelo" target="_blank" class="icoFacebook">
-                                <i class="fa fa-facebook-square" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.instagram.com/guhh.rabelo/" target="_blank" class="icoInstagram">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/gustavo-rabelo-teles-b7a1b6204/" target="_blank" class="icoLinkedin">
-                                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+<!--Rodapé-->    
+<footer class="site-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <h6>Recreio</h6>
+          <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis laborum facere dolore. Accusantium magnam aspernatur reiciendis vel consectetur adipisci, iusto quibusdam aut mollitia, recusandae blanditiis? Aliquid, ea est.dfgdfgdfgggggggggdforem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis laborum facere dolore.</p>
         </div>
-    
-        <div class="footer-copyright text-center ">
-            <span class=""> © 2021 Copyright Livraria Abraço</span>
+
+        <div class="col-xs-6 col-md-3">
+          <h6>Contato</h6>
+          <ul class="footer-links">
+            <li><a href="">11 95323-2378</a></li>
+            <li><a href="">R. Recreio 02 - Quatorze</a></li>
+            <li><a href="">recreio_org@abraco.com</a></li>
+            <li><a href="">@Recreio_Abraco</a></li>
+          
+          </ul>
         </div>
-    
-    </footer>
-</div>
+
+        <div class="col-xs-6 col-md-3">
+          <h6>Sobre Nos</h6>
+          <ul class="footer-links">
+            <li><a href="">Home</a></li>
+            <li><a href="">Loja</a></li>
+            <li><a href="">Sobre Nós</a></li>
+            <li><a href="">Contatos</a></li>
+            <li><a href="">Cadastro</a></li>
+          </ul>
+        </div>
+      </div>
+      <hr>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-sm-6 col-xs-12">
+          <p class="copyright-text">Copyright &copy; 2021 Todos os direitos reservados
+       <a href="#">Recreio</a>.
+          </p>
+        </div>
+
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <ul class="social-icons">
+            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a class="whatsapp" href="https://web.whatsapp.com/"><i class="fa fa-whatsapp"></i></a></li>
+            <li><a class="linkedin" href="#"><i class="fa fa-instagram"></i></a></li>   
+          </ul>
+        </div>
+      </div>
+    </div>
+</footer>
+
 
 <!--/Rodapé-->
