--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -7,9 +7,7 @@
           <img src="https://i.imgur.com/pPJOvih.png" alt="" class="w-100" />
           <div class="sloganText col-6">
             <h2>Um carinho para o saber</h2>
-            <h4>Quando abraçamos o conhecimento, todos nós ganhamos. Seja quem receba o livro por ter
-              mais chances de ter um futuro melhor, como você, pela felicidade de contribuir nesta
-              jornada.</h4>
+            <h4>Quando abraçamos o conhecimento, todos nós ganhamos.</h4>
           </div>
         </div>
       </div>
@@ -36,10 +34,6 @@
 
     </div>
     <!--/Sobre nós-->
-
-
-
-
 
     <!--/Principais itens dev-->
     <div class="container">
