--- a/src/app/loja/loja.component.html
+++ b/src/app/loja/loja.component.html
@@ -8,11 +8,11 @@
                 <div class="col-md-12">
                     <div class="sloganImg w-100">
                         <img src="https://i.imgur.com/pPJOvih.png" alt="" class="w-100" />
-                        <div class="sloganText col-6">
-                            <h2>Um carinho para o saber</h2>
-                            <h4>Quando abraçamos o conhecimento, todos nós ganhamos. Seja quem receba o livro por ter
-                                mais chances de ter um futuro melhor, como você, pela felicidade de contribuir nesta
-                                jornada.</h4>
+                        <div class="sloganText col-6 d-block">
+                            <div class="container">
+                                <h2>Um carinho para o saber</h2>
+                                <h4>Quando abraçamos o conhecimento, todos nós ganhamos. </h4>
+                            </div>
                         </div>
                     </div>
                 </div>
