Revisão geral em todas as paginas - HTML e CSS

--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -13,7 +13,7 @@
               <h1 id="alinhador">Contato</h1>
             
               <div class="row d-flex justify-content-center">
-              <h5> Converse conosco.</h5> 
+              <h5>Fale conosco</h5> 
             </div>
             </div>
            
