--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,9 +31,9 @@
           </a>
         </div>
       </div>
-      </div>
     </div>
-    
+  </div>
+
   <!--/Carrossel-->
 
   <!--Jumbotron-->
@@ -54,19 +54,19 @@
   </div>
   <!--/Jumbotron-->
 
-  <div class="container-fluid m-0 p-0"> 
+  <div class="container-fluid m-0 p-0">
     <div class="row mt-5 mb-4">
-    <div class="col-12 d-flex justify-content-center">
-      <hr class="hrDegrade">
+      <div class="col-12 d-flex justify-content-center">
+        <hr class="hrDegrade">
+      </div>
     </div>
   </div>
-</div>
- 
+
 
   <div class="container-fluid m-0 p-0">
     <div class="row mb-4">
       <div class="col-12">
-        <h2 class="oQueFazemos text-center">PRODUTOS EM DESTAQUE</h2>
+        <h2 class="titulos text-center">PRODUTOS EM DESTAQUE</h2>
       </div>
     </div>
 
@@ -187,9 +187,13 @@
         <div class="col-12  d-flex justify-content-center">
           <div class="container d-flex justify-content-between d-flex align-items-center">
             <div class="col-6 margemFazemos ">
-              <h2 class="oQueFazemos text-center mb-5">O QUE FAZEMOS</h2>
-              <p class="texto-esquerda text-justify mr-4"> Em códigos, queremos ajudar para que todos se sintam
-                abraçados com a cultura e a educação. Para isso, criamos a Livraria Abraço, um e-commerce para doar livros para quem mais precisa de cultura e educação, integrando quem quer doar a quem receber por meio da Internet.
+              <h2 class="titulos text-center mb-4">O QUE FAZEMOS</h2>
+              <p class="texto-esquerda text-justify mr-4">
+                Através da tecnologia queremos que todos se sintam abraçados à cultura e educação. Para isso, criamos a Livraria Abraço, um e-commerce que se conecta a pessoas e instituições, integrando doadores à Escolas, Universidades, ONG's
+                e Bibliotecas públicas. Buscamos facilitar e incentivar a leitura, levando o livro de forma acessivel, atingindo todas as
+                regiões do Brasil. 
+                Ao comprar um livro na Livraria Abraço, você estará ajudando para que mais pessoas possam sonhar, contribuindo com o desenvolvimento da cultura e educação.
+
               </p>
             </div>
             <div class="col-6">
@@ -210,12 +214,12 @@
     <div class="container-fluid p-0 m-0">
       <div class="row objetivos">
         <div class="col-12">
-          <h2 class="oQueFazemos text-center mb-4">Objetivos</h2>
+          <h2 class="titulos text-center mb-4">OBJETIVOS</h2>
         </div>
         <div class="container">
           <div class="col-12 d-flex justify-content-center">
             <div class="col">
-              <p>1. Ser referência: o melhor e-commerce de livros, consolidando-nos pela confiança e pela boa
+              <p>1. Ser referência: o melhor e-commerce de livros, nos consolidando pela confiança e pela boa
                 comunicação.</p>
             </div>
             <div class="col">
@@ -230,6 +234,8 @@
     </div>
 
     <!--/Objetivos-->
+
+
     <div class="row mb-5">
       <div class="col-12 d-flex justify-content-center">
         <hr class="hrDegrade">
@@ -237,20 +243,52 @@
     </div>
 
     <!--Nossos Parceiros-->
-    <div class="md-col-12">
-      <h2 class="oQueFazemos text-center">Nossos Parceiros</h2>
-    </div>
+    <div class="container mb-5">
+      <div class="row">
+        <div class="col-12 d-flex">
+          <div class="row d-flex justify-content-center">
+            <div class="col-4">
+              <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <a href="https://brazil.generation.org/" target="_blank" rel="noopener noreferrer">
+                    <img class="d-block w-100" src="https://pbs.twimg.com/profile_images/1298699507933294593/y9ClWYPz_400x400.jpg" alt="Primeiro Slide">
+                  </a>
+                  </div>
+                  <div class="carousel-item">
+                    <a href="https://www.fadc.org.br/" target="_blank" rel="noopener noreferrer">
+                      <img class="d-block w-100" src="https://i.imgur.com/wk4k4Xm.png" alt="Segundo Slide">
+                    </a>
+                    
+                  </div>
+                  <div class="carousel-item">
+                    <a href="https://razoesparaacreditar.com/" target="_blank" rel="noopener noreferrer">
+                    <img class="d-block w-100" src="https://i.imgur.com/tI2j7u1.png" alt="Terceiro Slide">
+                  </a>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Anterior</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Próximo</span>
+                </a>
+              </div>
+            </div>
+            <div class="col-4 d-flex align-items-center">
+              <div class="row ml-3">
+                <h3 class="titulos d-flex justify-content-center">NOSSOS PARCEIROS</h3>
+                <p>A Livraria Abraço atua como amiga de diversas instituições conectadas com a educação, a cultura e o bem-estar.</p>
+              </div>             
+            </div>
+          </div>
+        </div>
+      </div>
+   </div>
 
-    <div class="container d-flex align-items-center">
-      <div class="col-md-6 d-flex justify-content-center">
-        <img src="https://i.imgur.com/byTmZst.jpg" alt="" width="50%" height="50%">
-      </div>
-      <div class="col-md-4 ">
-        <p class=""> A Livraria Abraço atua como amiga de diversas instituições conectadas com a educação e a cultura:
-          Generation Brasil e a ONU Brasil.
-        </p>
-      </div>
-    </div>
+
     <!--/Nossos Parceiros-->
+
   </div>
-</div>
