--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -1,6 +1,6 @@
 .site-footer
 {
-  background-color:#65acd8;
+  background-color: #d3e6ed;
   padding:45px 0  20px;
   font-size:15px;
   line-height:24px;
@@ -17,7 +17,8 @@
 }
 .site-footer h6
 {   
-  color:#fff;
+  color:#005186;
+  font: bold;
   font-size:16px;
   text-transform:uppercase;
   margin-top:5px;
@@ -25,11 +26,11 @@
 }
 .site-footer a
 {
-  color:#737373;
+  color:#005186;
 }
 .site-footer a:hover
 {
-  color:#3366cc;
+  color:#005186;
   text-decoration:none;
 }
 .footer-links
@@ -148,7 +149,7 @@
 {
   background-color:#007bb6
 }
-.social-icons a.dribbble:hover
+.social-icons a.instagram:hover
 {
   background-color:#ea4c89
 }
