--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -1,209 +1,69 @@
 * {
-    box-sizing: border-box;
-  }
-
-
-  .corDefundo{
-    background-color: #f9f9f9;
+  box-sizing: border-box;
 }
 
-#img-bg{
-    background-image: url(https://i.imgur.com/DnUWPqC.jpg);
-    background-repeat: no-repeat;
-    background-position: 50%;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    margin-bottom: 25px;
-    background-size: 90%;
+.main-container .login-wrapper {
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 10px 6px rgba(0,0,0,0.2);
+  width: 100%;
+  height: 464px;
+  margin: 100px 0px 100px 0px ;
+  display: flex;
 }
 
-.corDefundo{
-    background-color: #f9f9f9;
+.main-container .login-wrapper .form-wrapper {
+  min-width: 45%;
+  display: flex;
+  flex-direction: column;
 }
 
-  .main-container {
-    min-height: 100vh;
-    background-color: #ffffff;
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  
-    font-family: 'Rubik', sans-serif;
-    font-size: 13px;
-  }
-  
-  .main-container a {
-    text-decoration: none;
-  }
-  
-  .main-container .login-wrapper {
-    background-color: #fff;
-    -webkit-box-shadow: 0px 0px 10px 6px rgba(0,0,0,0.2);
-  
-  
-    width: 100%;
-    max-width: 900px;
-    min-height: 520px;
-    display: flex;
-  }
-  
-  
-  .main-container .login-wrapper .form-wrapper {
-    min-width: 45%;
-    
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    
-    padding: 15px;
-    margin-top: 15px;
-  
-    font-weight: 900;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-header .fa-arrow-left,
-  .main-container .login-wrapper .form-wrapper .form-header .register-link,
-  .main-container .login-wrapper .form-wrapper .form-container .forgot-pass {
-    color: #686b72;
-  }
-  
-  .cinza{
-      background-color: #eeeeee;
-      border-color: #eeeeee;
-      outline: 2px solid #4694a8;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container {
-    padding: 0px 60px;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form-messages {
-    text-align: left;
-    line-height: 20px;
-    margin-bottom: 30px;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form-messages h2 {
-    margin-bottom: 15px;
-    margin-top: 30px;
-    font-size: 20px;
-    font-weight: 600;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form input {
-    width: 100%;
-    margin-bottom: 15px;
-    background-color: #eeeeee;
-    border: none;
-    padding: 10px;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form input:focus {
-    outline: 2px solid #4694a8;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form a {
-    display: block;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form .forgot-pass {
-    text-align: right;
-    font-weight: 900;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form .login-button {
-    margin-top: 20px;
-    margin-bottom: 30px;
-    padding: 10px;
-    border-radius: 50px;
-    background-color: #005186;
-    color: #fff;
-    text-align: center;
-  }
-  
-  /* Separador */
-  .main-container .login-wrapper .form-wrapper .form-container .separator {
-    border: 2px solid #e8e9ea;
-    margin-bottom: 35px;
-  }
-  
-  /* login */
-  .main-container .login-wrapper .form-wrapper .form-container .login-options {
-    margin: 20px 20px;
-    text-align: center;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .login-options .login-text {
-    margin-bottom: 15px;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .login-icons {
-    font-size: 20px;
-  }
-  
-  .main-container .login-wrapper .form-wrapper .form-container .login-icons .fa-facebook-square .cinza,
-  .main-container .login-wrapper .form-wrapper .form-container .login-icons .fa-google,
-  .main-container .login-wrapper .form-wrapper .form-container .login-icons .fa-twitter {
-    color: #4694a8;
-    padding: 0px 10px;
-  }
-  
-  /* Imagen*/
-  
-  .main-container .image-wrapper {
-    background: url("https://i.imgur.com/Wnd8pOM.jpg");
-    width: 100%;
-    background-position: center;
-    background-size: cover;
-  
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-  }
-  
-  .main-container .image-wrapper .image-message {
-    color: #fff;
-    line-height: 20px;
-  
-    padding: 50px 70px 70px 40px;
-  
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .main-container .image-wrapper .image-message .image-hr-container {
-    margin: 5px 20px;
-  }
-  
-  .main-container .image-wrapper .image-message .image-hr-container .image-hr {
-    border: 1px solid #e8e9ea;
-    min-width: 30px;
-  }
-  
-  .main-container .image-wrapper .image-message .image-text h2 {
-    font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 15px;
-  }
- 
-  #alinhador
-  {
-     
-     padding-left: 22mm;
-  } 
-  
-  .main-container .login-wrapper .form-wrapper .form-container .form .login-button {
-    margin-top: 20px;
-    margin-bottom: 30px;
-    padding: 10px;
-    border-radius: 50px;
-    background-color: #005186;
-    color: #fff;
-    text-align: center;
-  }
+.main-container .login-wrapper .form-wrapper .form-container {
+  padding: 0px 60px;
+}
+
+.main-container .login-wrapper .form-wrapper .form-container .form-messages {
+  text-align: left;
+  line-height: 20px;
+  margin-bottom: 30px;
+}
+
+.main-container .login-wrapper .form-wrapper .form-container .form input {
+  width: 100%;
+  margin-bottom: 15px;
+  background-color: #eeeeee;
+  border: none;
+  padding: 10px;
+}
+
+.main-container .login-wrapper .form-wrapper .form-container .form input:focus {
+  outline: 2px solid #4694a8;
+}
+
+.main-container .login-wrapper .form-wrapper .form-container .form .login-button {
+  width: 180px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  padding: 10px;
+  border-radius: 50px;
+  border: none;
+  background-color: #005186;
+  color: #fff;
+  text-align: center;
+}
+
+.main-container .image-wrapper {
+  background: url("https://i.imgur.com/Wnd8pOM.jpg");
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+#alinhador
+{
+   text-align: center;
+   margin-top: 30px;
+   margin-bottom: 20px;
+} 
