--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -2,30 +2,37 @@
 <footer class="site-footer">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-6">
+        <div class="col-5 mr-5">
           <h6>Recreio</h6>
-          <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis laborum facere dolore. Accusantium magnam aspernatur reiciendis vel consectetur adipisci, iusto quibusdam aut mollitia, recusandae blanditiis? Aliquid, ea est.dfgdfgdfgggggggggdforem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis laborum facere dolore.</p>
+          <p class="text-justify"> A Recreio é uma empresa preocupada com a qualidade e desenvolvimento da educação e cultura. Para isso utilizamos a tecnologia como uma ferramenta, tornando o aprendizado mais fácil e divertido.</p>
         </div>
 
         <div class="col-xs-6 col-md-3">
-          <h6>Contato</h6>
+          <h6>Contatos</h6>
           <ul class="footer-links">
-            <li><a href="">11 95323-2378</a></li>
-            <li><a href="">R. Recreio 02 - Quatorze</a></li>
-            <li><a href="">recreio_org@abraco.com</a></li>
-            <li><a href="">@Recreio_Abraco</a></li>
-          
+            <li>R. Recreio, 02 - 14º Andar</li>
+            <li>São Paulo, SP</li>
+            <li>+55 11 98765-4321</li>
+            <li><a href="">livrariaabraco@recreio.com.br</a></li>
           </ul>
+          <h6>Redes Sociais</h6>
+          <ul class="social-icons d-flex justify-content-start">
+            <li><a class="facebook" href="https://facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa fa-facebook"></i></a></li>
+            <li><a class="linkedin" href="https://linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin"></i></a></li>
+            <li><a class="instagram" href="https://instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram"></i></a></li>
+            <li><a class="whatsapp" href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer"><i class="fa fa-whatsapp"></i></a></li>             
+          </ul>
+
         </div>
 
         <div class="col-xs-6 col-md-3">
-          <h6>Sobre Nos</h6>
+          <h6>Acesso Rápido</h6>
           <ul class="footer-links">
-            <li><a href="">Home</a></li>
-            <li><a href="">Loja</a></li>
-            <li><a href="">Sobre Nós</a></li>
-            <li><a href="">Contatos</a></li>
-            <li><a href="">Cadastro</a></li>
+            <li><a routerLink="/home">Home</a></li>
+            <li><a routerLink="/loja">Loja</a></li>
+            <li><a routerLink="/sobre-nos">Sobre Nós</a></li>
+            <li><a routerLink="/contato">Fale Conosco</a></li>
+            <li><a routerLink="/cadastro">Cadastro</a></li>
           </ul>
         </div>
       </div>
@@ -33,18 +40,9 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2021 Todos os direitos reservados
-       <a href="#">Recreio</a>.
+        <div class="col-md-12 col-sm-6 col-xs-12">
+          <p class="copyright-text d-flex justify-content-center">Copyright &copy; 2021 Todos os direitos reservados a Recreio
           </p>
-        </div>
-
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <ul class="social-icons">
-            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="whatsapp" href="https://web.whatsapp.com/"><i class="fa fa-whatsapp"></i></a></li>
-            <li><a class="linkedin" href="#"><i class="fa fa-instagram"></i></a></li>   
-          </ul>
         </div>
       </div>
     </div>
