--- a/src/app/sobre-nos/sobre-nos.component.css
+++ b/src/app/sobre-nos/sobre-nos.component.css
@@ -2,6 +2,34 @@
   padding: 0px;
   margin: 0px;
 }
+#alinhaNomeio {
+  
+ 
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center
+  }
+  #alinhatd {
+  
+  background: #fff;
+  }
+  body {
+  margin: 0px;
+  }
+
+  #afastaOsCards
+  {
+    float: left;
+    width: 100px; height: 200px;
+    margin: 10px 20px;
+  }
+
+  #afastaTudo
+  {
+    
+    margin: 5% 0;
+  }
 
 p{
   font-size: 18px;
@@ -34,12 +62,17 @@ p{
 .container
 {
   color:#3d3d3d ;
+  margin: 5% 0;
 }
 #corDosCards
 {
   background-color: #65ACD8;
-
 }
+
+#corDosCards:hover .text-monospace{
+  color: #fef25b;
+}
+
 .display {
   display: none;
 }
@@ -109,12 +142,6 @@ img.rounded-circle {
   
 }
 
-
-.trocaCordoNome:hover {
-    
-  color: #fef25b;
-}
-
  
 h1{
   font-size: 6vw;
@@ -133,8 +160,9 @@ h3{
 
 .card-body {
   align-items: center;
-  height: 450px;
-}
+  height: 500px;
+  
+  }
 
 .card-body > p {
   word-wrap: break-word;
@@ -150,8 +178,40 @@ h3{
 -webkit-box-shadow: 0px 0px 10px 6px rgba(0,0,0,0.2);
 
 }
-.card
-{
- border-color: rgb(192, 192, 192);
- 
+
+.card {
+  box-shadow: 0 14px 14px 0 rgba(0, 0, 0, 0.2);
+  max-width: 270px;
+  margin: auto;
+  text-align: center;
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover, a:hover {
+  
+  opacity: 0.9;
+  
 }
