--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -52,7 +52,7 @@
 }
 
 .main-container .image-wrapper {
-  background: url("https://i.imgur.com/Wnd8pOM.jpg");
+  background: url("https://i.imgur.com/cfsv1TK.jpg");
   width: 100%;
   background-position: center;
   background-size: cover;
