--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -79,8 +79,8 @@
               <div class="card">
                 <img class="card-img-top" src="https://i.imgur.com/G80nmke.jpeg">
                 <div class="card-body">
-                  <h5 class="card-title">Card One</h5>
-                  <p class="card-text">Some quick example</p>
+                  <p class="card-title font-weight-bold m-0">Uma Terra Prometida</p>
+                  <p class="card-text">Barack Obama</p>
                 </div>
               </div>
             </div>
@@ -88,26 +88,26 @@
               <div class="card">
                 <img class="card-img-top" src="https://i.imgur.com/lA4LIaH.jpg">
                 <div class="card-body">
-                  <h5 class="card-title">Card Two</h5>
-                  <p class="card-text">Some quick example</p>
+                  <p class="card-title font-weight-bold m-0">Dom Casmurro</p>
+                  <p class="card-text">Machardo de Assis</p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://i.imgur.com/BEgAAX6.jpeg">
+                <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/A1VLAgenDNL.jpg">
                 <div class="card-body">
-                  <h5 class="card-title">Card Three</h5>
-                  <p class="card-text">Some quick example</p>
+                  <p class="card-title font-weight-bold m-0">Os Irmãos Karamazov</p>
+                  <p class="card-text">Fiódor Dostoiévski</p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://i.imgur.com/cH5C0Ar.jpg">
+                <img class="card-img-top" src="https://i.imgur.com/igrjgde.jpg">
                 <div class="card-body">
-                  <h5 class="card-title">Card Three</h5>
-                  <p class="card-text">Some quick example</p>
+                  <p class="card-title font-weight-bold m-0">Física Básica</p>
+                  <p class="card-text">Moysés Nussenzveig</p>
                 </div>
               </div>
             </div>
@@ -117,28 +117,28 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4">
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://i.imgur.com/jukEX5i.jpg">
+                <img class="card-img-top" src="https://i.imgur.com/ZQytLGg.jpg">
                 <div class="card-body">
-                  <h5 class="card-title">Card Four</h5>
-                  <p class="card-text">Some quick example</p>
+                  <p class="card-title font-weight-bold m-0">Jogador Número 1</p>
+                  <p class="card-text">Ernest Cline</p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://i.imgur.com/BEgAAX6.jpeg">
+                <img class="card-img-top" src="https://i.imgur.com/0TLdO23.jpg">
                 <div class="card-body">
-                  <h5 class="card-title">Card Five</h5>
-                  <p class="card-text">Some quick example</p>
+                  <p class="card-title font-weight-bold m-0">Harry Potter</p>
+                  <p class="card-text">J.K Rowling</p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://i.imgur.com/kBprmIm.jpg">
+                <img class="card-img-top" src="https://i.imgur.com/LxrkC0w.jpg">
                 <div class="card-body">
-                  <h5 class="card-title">Card Six</h5>
-                  <p class="card-text">Some quick example</p>
+                  <p class="card-title font-weight-bold m-0">Orgulho e Preconceito</p>
+                  <p class="card-text">Jane Austen</p>
                 </div>
               </div>
             </div>
@@ -146,8 +146,8 @@
               <div class="card">
                 <img class="card-img-top" src="https://i.imgur.com/0GBYZ5e.jpg">
                 <div class="card-body">
-                  <h5 class="card-title">Card Six</h5>
-                  <p class="card-text">Some quick example</p>
+                  <p class="card-title font-weight-bold m-0">Racismo Estrutural</p>
+                  <p class="card-text">Silvio Almeida</p>
                 </div>
               </div>
             </div>
