--- a/src/app/adm/adm.component.html
+++ b/src/app/adm/adm.component.html
@@ -26,8 +26,7 @@
                             <label for="tipo"></label>
                             <select class="form" name="tipo" id="tipo" (change)='tipoUsuario($event)'>
                                 <option value="">Selecione o tipo de usuário</option>
-                                <option value="normal">Pessoa Juridica</option>
-                                <option value="normal">Pessoa Física</option>
+                                <option value="adm">Administrador</option>
                             </select>
                             
                             <div id="afastaBotao" class="row d-flex justify-content-center">
