--- a/src/app/admnavbar/admnavbar.component.html
+++ b/src/app/admnavbar/admnavbar.component.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" routerLink='/categoria'><img src="https://i.imgur.com/2uokwRX.png" alt="Icone Nova Categoria"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" (click)='sair()'><img src="https://i.imgur.com/2HXUqoo.png" alt="Icone sair"></a>
+                <a class="nav-link" (click)='sair()'><img src="https://i.imgur.com/A5TtITp.png" alt="Icone sair"></a>
             </li>
         </ul>
         </div>
