--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,36 +1,36 @@
-<main>
-    <article class="main-container">
-      <div class="login-wrapper">
-
-        <section class="image-wrapper"> 
-        </section>
-
-        <section class="form-wrapper">
-          <div class="form-container align-items-center">
-           
-            <div class="form-messages">
-                
-              <h1 id="alinhador">Contato</h1>
-            
-              <div class="row d-flex justify-content-center">
-              <h5>Fale conosco</h5> 
-            </div>
-            </div>
-           
-             <form  action="fakeurl.php" class="form ">
-              <input type="email" name="user-email" id="user-email" placeholder="E-mail">
-              <input type="assunto" name="user-assunto" id="user-email" placeholder="Assunto">
-              <textarea name="mensagem" id="" cols="40" rows="4" class="cinza" placeholder="Escreva sua mensagem"></textarea>
-            </form>
-            <a href="#" class="login-button">Entrar</a>
+<!--Tela de Login-->
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 d-fle justify-content-center">
+      <main>
+        <article class="main-container">
+          <div class="login-wrapper">
+    
+            <section class="image-wrapper"> 
+            </section>
+            <section class="form-wrapper">
+              <div class="form-container align-items-center">
+               
+                <div class="form-messages">
+      
+                  <h1 id="alinhador">Contato</h1>
+                </div>
+          
+                 <form  action="fakeurl.php" class="form ">
+                  <input type="email" name="user-email" id="user-email" placeholder="E-mail">
+                  <input type="assunto" name="assunto" id="assunto" placeholder="Assunto">
+                  <textarea name="" id="" class="form-control" cols="30" rows="5" placeholder="Digite seu texto aqui"></textarea>
+                  <button type="submit" class="login-button">Enviar</button>
+                </form>
+              </div>
+            </section>
+      
             
           </div>
-        </section>
-  
-        <!-- Imagem -->
-        
-      </div>
-    </article>
-  </main>
-
-  <!--Tela de Login-->
+        </article>
+      </main>
+    
+    </div>
+  </div>
+</div>
+<!--/Tela de Login-->
