--- a/src/app/loja/loja.component.html
+++ b/src/app/loja/loja.component.html
@@ -36,8 +36,10 @@
         <div class="row d-flex justify-content-center">
             <div class="col-2 ml-2 mt-5">
                 <h3 class="mb-1" style="color: #005186">Categorias</h3>
-                <ul class="list-group list-group-flush" *ngFor='let itemCategoria of listaCategoria'>
-                    <a href="#" class="list-group-item list-group-item-action">{{itemCategoria.genero}}</a>
+                <ul class="list-group list-group-flush"
+                    *ngFor='let itemCategoria of listaCategoria | orderBy : key : reverse'>
+                    <a [routerLink]="['{{itemCategoria.genero}}']" (click)='findByGeneroCategoria()'
+                        class="list-group-item list-group-item-action">{{itemCategoria.genero}}</a>
                 </ul>
             </div>
 
