--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -17,6 +17,7 @@
 
 
 
+
 <div id="alinhaNomeio">
   <div id="alinhatd">
 
@@ -26,16 +27,14 @@
       <div class="row mt-4 mb-1">
         <div class="col-md-6">
           <h1 class="text-center text-monospace display-2 text-uppercase font-weight-bold m-2">Sobre a Recreio</h1>
-          <p class="text-justify letra ">
+          <p class="text-justify letra mr-5 ">
             Nós da Recreio atuamos não apenas como empresa, mas como parceiros da Educação e Cultura. Utilizando a
             tecnologia desenvolvemos sistemas que levam praticidade e facilidade não só para o aprendizado, mas para o
             bem-estar e lazer. Com foco em crianças e adolescentes em situações de vulnerabilidade social, criando
             soluções para você cada dia mais abraçar o saber.
         </div>
         <div class="col-md-4 img-titulo">
-          <div class="img-rs display">
-            <img width="1000px" height="1000px" src="https://i.imgur.com/MRGPzTx.gif" alt="">
-          </div>
+            <img class="ImagemSobrenos" src="https://i.imgur.com/0sxnbU0.jpg" alt="">
         </div>
 
       </div>
@@ -149,7 +148,7 @@
                     meu objetivo é me aprofundar mais e mais nessa área
                     maravilhosa.
                   </p>
-                  <footer>
+                  <footer class="mt-3">
                     <a target="_blank" id="aumentaIconsInsta" href="https://www.instagram.com/glicogomes/"><img
                         height="47px" width="47px" src="https://i.imgur.com/mxQhjrW.gif" alt=""></a>
                     <a target="_blank" id="aumentaIconsGit " href="https://github.com/danielagff?tab=repositories"><img
@@ -171,10 +170,11 @@
                     class="foto img-fluid rounded-circle w-50 mb-3 mt-3">
                   <h3>Danilo Pereira</h3>
                   <h5>Full stack developer jr.</h5>
-                  <p class="mt-3 mb-3">Sou analítico, comunicativo e criativo. Com linhas de código, intercâmbio conhecimentos
+                  <p class="mt-3 mb-3">Sou analítico, comunicativo e criativo. Com linhas de código, intercâmbio
+                    conhecimentos
                     e procuro resolver problemas.
                   </p>
-                  <footer>
+                  <footer class="mt-3">
                     <a id="aumentaIconsInsta" href="https://www.instagram.com/danilo.pereira123/" target="_blank"><img
                         height="47px" width="47px" src="https://i.imgur.com/mxQhjrW.gif" alt=""></a>
                     <a id="aumentaIconsGit " href="https://github.com/danilopereiradasilva" target="_blank"><img
@@ -193,6 +193,8 @@
                   <img src="https://i.imgur.com/Nh8oEvS.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3 mt-3">
                   <h3>Gustavo Rabelo</h3>
                   <h5>Full stack developer jr.</h5>
+                  <p class="mt-3 mb-3">Experiência como analista de suporte, focando em entrar na área de
+                    desenvolvimento. Leal e estável, considera a todo aprendizado util e uma boa jornada.</p>
                   <footer>
                     <a id="aumentaIconsInsta" href="https://www.instagram.com/guhh.rabelo" target="_blank"><img
                         height="47px" width="47px" src="https://i.imgur.com/mxQhjrW.gif" alt=""></a>
@@ -212,6 +214,8 @@
                   <img src="https://i.imgur.com/54FzKdU.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3 mt-3">
                   <h3>Luiz Felipe</h3>
                   <h5>Full stack developer jr.</h5>
+                  <p class="mt-3 mb-3">Engenheiro Civil em transição de carreira,
+                    desenvolve neste novo caminho novas habilidades para ser um bom desenvolvedor. </p>
 
                   <footer>
                     <a id="aumentaIconsInsta" href="https://www.instagram.com/felipe_mag/" target="_blank"><img
