--- a/src/app/loja-categoria/loja-categoria.component.html
+++ b/src/app/loja-categoria/loja-categoria.component.html
@@ -1,6 +1,4 @@
-<!--Body-->
-<div class="container-fluid mt-5">
-
+<div class="container-fluid mt-5"> 
     <body>
         <!--Jumbotron-->
         <div class="container-fluid">
@@ -20,7 +18,6 @@
         </div>
         <!--/Jumbotron-->
 
-
         <!--Campo de Pesquisa-->
         <div class="row d-flex justify-content-center mt-5 mb-5">
             <div class="col-md-4">
@@ -32,31 +29,32 @@
         </div>
         <!--/Campo de Pesquisa-->
 
-        <!--Produtos-->
-        <div class="row d-flex justify-content-center">
-            <div class="col-2 ml-2 mt-5" >
+        
+         <!--Produtos-->
+         <div class="row d-flex justify-content-center">
+            <div class="col-2 ml-2 mt-5">
                 <h3 class="mb-1" style="color: #005186">Categorias</h3>
                 <ul class="list-group list-group-flush">
                     <a routerLink='/loja' class="list-group-item list-group-item-action">Todas as Categorias</a>
                 </ul>
                 <ul class="list-group list-group-flush"
                     *ngFor='let itemCategoria of listaCategoria | orderBy : key : reverse'>
-                    <a [routerLink]="['/loja-categoria',itemCategoria.genero]" 
+                    <a [routerLink]="['/loja-categoria',itemCategoria.genero]" (click)='findByGeneroProduto(itemCategoria.genero)'
                         class="list-group-item list-group-item-action">{{itemCategoria.genero}}</a>
                 </ul>
             </div>
 
             <div class="col-9 ml-5 mt-5">
-                <div class="card cardProdutos text-center" *ngFor='let item of listaProdutos'>
+                <div class="card cardProdutos text-center" *ngFor='let item of listaCategoriaFiltrada'>
                     <div class="card-body">
                         <a [routerLink]="['/compra',item.id]"><img src="{{item.imagem}}" alt=""
-                                class="imgLivro mt-4" /></a>
-                        <h5 class="card-title mt-2 text-left ml-2">{{item.nome}}</h5>
-                        <h6 class="card-title mt-2 text-left ml-2">{{item.autor}}</h6>
-                        <p class="card-text text-left ml-2">R$ {{item.preco}}</p>
+                            class="imgLivro mt-4" /></a>
+                        <h5 class="card-title mt-2 text-left ml-2"> {{item.nome}} </h5>
+                        <h6 class="card-title mt-2 text-left ml-2"> {{item.autor}} </h6>
+                        <p class="card-text text-left ml-2">R$ {{item.preco}} </p>
                     </div>
                     <div class="card-footer mt-2">
-                        <a [routerLink]="['/compra',item.id]" class="button mb-5">Comprar</a>
+                        <a [routerLink]="['/compra', item.id ]" class="button mb-5">Comprar</a>
                     </div>
                 </div>
             </div>
@@ -64,7 +62,13 @@
 
         <!--/Produtos-->
 
+        
+
+
+
     </body>
 
+
 </div>
-<!--/Body-->
+
+
