Pesquisa de categoria filtrada implementada

--- a/src/app/loja-categoria/loja-categoria.component.html
+++ b/src/app/loja-categoria/loja-categoria.component.html
@@ -23,7 +23,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <input type="text" class="form-control" id="titulo" placeholder="Digite o título para pesquisar"
-                        [(ngModel)]='tituloProduto' (keyup)='findByTituloProduto()'>
+                        [(ngModel)]='tituloProdutoCategoria' (keyup)=' findByTituloProdutoCategoria()' >
                 </div>
             </div>
         </div>
