Colocada a logo no footer e criado a condição para o footer aparecer em paginas especificas.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,8 @@
 
 <router-outlet></router-outlet>
 
-<app-rodape></app-rodape>
+<app-rodape *ngIf = homeRoute()></app-rodape>
+
+<app-rodape *ngIf = lojaRoute()></app-rodape>
+
+<app-rodape *ngIf = sobreNosRoute()></app-rodape>
