--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,16 +39,7 @@
   <!--Jumbotron-->
   <div class="container-fluid m-0 p-0">
     <a routerLink='/contato'>
-      <div class="row jumbotron" style="height: 19vw;">
-        <div class="col-12 m-0 p-0">
-          <div class="jumbotronText">
-            <div class="col-7">
-              <h2>Apoie nossa causa!</h2>
-              <h3>A Livraria Abraço é um e-commerce que nasceu para atingir a ODS 4 da ONU e levar cultura e educação a
-                pessoas carentes.</h3>
-            </div>
-          </div>
-        </div>
+      <div class="row jumbotron" style="height: 17vw;">
       </div>
     </a>
   </div>
@@ -71,7 +62,7 @@
     </div>
 
     <!--Carousel de cards-->
-    <div id="myCarousel" class="carousel slide mb-5" data-ride="carousel" data-interval="false">
+    <div id="myCarousel" class="carousel slide mb-5" data-ride="carousel" data-interval="5000">
       <div class="carousel-inner carousel-produtos mx-auto">
         <div class="carousel-item active">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4">
