--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,19 +1,22 @@
 <!--Rodapé-->    
-<footer class="site-footer">
-    <div class="container">
+<footer class="site-footer mt-5">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-5 mr-5">
+        <div class="col logo-footer">
+          <img src="https://i.imgur.com/uf5CaLc.png" alt="Logo tipo da Livraria Abraço">
+        </div>
+        
+        <div class="col-3 mr-5">
           <h6>Recreio</h6>
           <p class="text-justify"> A Recreio é uma empresa preocupada com a qualidade e desenvolvimento da educação e cultura. Para isso utilizamos a tecnologia como uma ferramenta, tornando o aprendizado mais fácil e divertido.</p>
         </div>
-
-        <div class="col-xs-6 col-md-3">
+        <div class="col">
           <h6>Contatos</h6>
           <ul class="footer-links">
             <li>R. Recreio, 02 - 14º Andar</li>
             <li>São Paulo, SP</li>
             <li>+55 11 98765-4321</li>
-            <li><a href="">livrariaabraco@recreio.com.br</a></li>
+            <li><a href="#">livrariaabraco@recreio.com.br</a></li>
           </ul>
           <h6>Redes Sociais</h6>
           <ul class="social-icons d-flex justify-content-start">
@@ -22,10 +25,8 @@
             <li><a class="instagram" href="https://instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram"></i></a></li>
             <li><a class="whatsapp" href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer"><i class="fa fa-whatsapp"></i></a></li>             
           </ul>
-
         </div>
-
-        <div class="col-xs-6 col-md-3">
+        <div class="col">
           <h6>Acesso Rápido</h6>
           <ul class="footer-links">
             <li><a routerLink="/home">Home</a></li>
