Atualização de responsividade em componentes NavBar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -68,7 +68,9 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4">
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://i.imgur.com/G80nmke.jpeg">
+                <a routerLink='/loja'>
+                  <img class="card-img-top" src="https://i.imgur.com/G80nmke.jpeg">
+                </a>
                 <div class="card-body">
                   <p class="card-title font-weight-bold m-0">Uma Terra Prometida</p>
                   <p class="card-text">Barack Obama</p>
@@ -77,7 +79,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://i.imgur.com/lA4LIaH.jpg">
+                <a routerLink='/loja'>
+                  <img class="card-img-top" src="https://i.imgur.com/lA4LIaH.jpg">
+                </a>
                 <div class="card-body">
                   <p class="card-title font-weight-bold m-0">Dom Casmurro</p>
                   <p class="card-text">Machardo de Assis</p>
@@ -86,7 +90,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/A1VLAgenDNL.jpg">
+                <a routerLink='/loja'>
+                  <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/A1VLAgenDNL.jpg">
+                </a>
                 <div class="card-body">
                   <p class="card-title font-weight-bold m-0">Os Irmãos Karamazov</p>
                   <p class="card-text">Fiódor Dostoiévski</p>
@@ -95,7 +101,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://i.imgur.com/igrjgde.jpg">
+                <a routerLink='/loja'>
+                  <img class="card-img-top" src="https://i.imgur.com/igrjgde.jpg">
+                </a>
                 <div class="card-body">
                   <p class="card-title font-weight-bold m-0">Física Básica</p>
                   <p class="card-text">Moysés Nussenzveig</p>
@@ -108,7 +116,9 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4">
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://i.imgur.com/ZQytLGg.jpg">
+                <a routerLink='/loja'>
+                  <img class="card-img-top" src="https://i.imgur.com/ZQytLGg.jpg">
+                </a>
                 <div class="card-body">
                   <p class="card-title font-weight-bold m-0">Jogador Número 1</p>
                   <p class="card-text">Ernest Cline</p>
@@ -117,7 +127,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://i.imgur.com/0TLdO23.jpg">
+                <a routerLink='/loja'>
+                  <img class="card-img-top" src="https://i.imgur.com/0TLdO23.jpg">
+                </a>
                 <div class="card-body">
                   <p class="card-title font-weight-bold m-0">Harry Potter</p>
                   <p class="card-text">J.K Rowling</p>
@@ -126,7 +138,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://i.imgur.com/LxrkC0w.jpg">
+                <a routerLink='/loja'>
+                  <img class="card-img-top" src="https://i.imgur.com/LxrkC0w.jpg">
+                </a>
                 <div class="card-body">
                   <p class="card-title font-weight-bold m-0">Orgulho e Preconceito</p>
                   <p class="card-text">Jane Austen</p>
@@ -135,7 +149,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img class="card-img-top" src="https://i.imgur.com/0GBYZ5e.jpg">
+                <a routerLink='/loja'>
+                  <img class="card-img-top" src="https://i.imgur.com/0GBYZ5e.jpg">
+                </a>
                 <div class="card-body">
                   <p class="card-title font-weight-bold m-0">Racismo Estrutural</p>
                   <p class="card-text">Silvio Almeida</p>
@@ -156,6 +172,7 @@
     </div>
     <!--/Carousel de cards-->
 
+
     <!--Botão Ver mais-->
     <div class="svg-wrapper">
       <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
@@ -175,15 +192,19 @@
     <!--O que fazemos-->
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12  d-flex justify-content-center">
+        <div class="col-12  d-flex justify-content-center ">
           <div class="container d-flex justify-content-between d-flex align-items-center">
-            <div class="col-6 margemFazemos ">
-              <h2 class="titulos text-center mb-4">O QUE FAZEMOS</h2>
+            <div class="col-6 margemFazemos oQuefazemos">
+              <h2 class="titulos text-center mb-4 ">O QUE FAZEMOS</h2>
               <p class="texto-esquerda text-justify mr-4">
-                Através da tecnologia queremos que todos se sintam abraçados à cultura e educação. Para isso, criamos a Livraria Abraço, um e-commerce que se conecta a pessoas e instituições, integrando doadores à Escolas, Universidades, ONG's
-                e Bibliotecas públicas. Buscamos facilitar e incentivar a leitura, levando o livro de forma acessivel, atingindo todas as
-                regiões do Brasil. 
-                Ao comprar um livro na Livraria Abraço, você estará ajudando para que mais pessoas possam sonhar, contribuindo com o desenvolvimento da cultura e educação.
+                Através da tecnologia queremos que todos se sintam abraçados à cultura e educação. Para isso, criamos a
+                Livraria Abraço, um e-commerce que se conecta a pessoas e instituições, integrando doadores à Escolas,
+                Universidades, ONG's
+                e Bibliotecas públicas. Buscamos facilitar e incentivar a leitura, levando o livro de forma acessivel,
+                atingindo todas as
+                regiões do Brasil.
+                Ao comprar um livro na Livraria Abraço, você estará ajudando para que mais pessoas possam sonhar,
+                contribuindo com o desenvolvimento da cultura e educação.
 
               </p>
             </div>
@@ -243,19 +264,21 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <a href="https://brazil.generation.org/" target="_blank" rel="noopener noreferrer">
-                    <img class="d-block w-100" src="https://pbs.twimg.com/profile_images/1298699507933294593/y9ClWYPz_400x400.jpg" alt="Primeiro Slide">
-                  </a>
+                      <img class="d-block w-100"
+                        src="https://pbs.twimg.com/profile_images/1298699507933294593/y9ClWYPz_400x400.jpg"
+                        alt="Primeiro Slide">
+                    </a>
                   </div>
                   <div class="carousel-item">
                     <a href="https://www.fadc.org.br/" target="_blank" rel="noopener noreferrer">
                       <img class="d-block w-100" src="https://i.imgur.com/wk4k4Xm.png" alt="Segundo Slide">
                     </a>
-                    
+
                   </div>
                   <div class="carousel-item">
                     <a href="https://razoesparaacreditar.com/" target="_blank" rel="noopener noreferrer">
-                    <img class="d-block w-100" src="https://i.imgur.com/tI2j7u1.png" alt="Terceiro Slide">
-                  </a>
+                      <img class="d-block w-100" src="https://i.imgur.com/tI2j7u1.png" alt="Terceiro Slide">
+                    </a>
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -271,13 +294,14 @@
             <div class="col-4 d-flex align-items-center">
               <div class="row ml-3">
                 <h3 class="titulos d-flex justify-content-center">NOSSOS PARCEIROS</h3>
-                <p>A Livraria Abraço atua como amiga de diversas instituições conectadas com a educação, a cultura e o bem-estar.</p>
-              </div>             
+                <p>A Livraria Abraço atua como amiga de diversas instituições conectadas com a educação, a cultura e o
+                  bem-estar.</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-   </div>
+    </div>
 
 
     <!--/Nossos Parceiros-->
