--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -6,7 +6,7 @@
   background-color: #fff;
   -webkit-box-shadow: 0px 0px 10px 6px rgba(0,0,0,0.2);
   width: 100%;
-  height: 464px;
+  height: 100%;
   margin: 100px 0px 100px 0px ;
   display: flex;
 }
