--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -5,31 +5,33 @@
       <main>
         <article class="main-container">
           <div class="login-wrapper">
-    
-            <section class="image-wrapper"> 
+
+            <section class="image-wrapper">
             </section>
             <section class="form-wrapper">
               <div class="form-container align-items-center">
-               
+
                 <div class="form-messages">
-      
+
                   <h1 id="alinhador">Contato</h1>
                 </div>
-          
-                 <form  action="fakeurl.php" class="form ">
+
+                <form action="fakeurl.php" class="form ">
+                  <input type="nome" name="user-nome" id="user-nome" placeholder="Nome">
                   <input type="email" name="user-email" id="user-email" placeholder="E-mail">
                   <input type="assunto" name="assunto" id="assunto" placeholder="Assunto">
-                  <textarea name="" id="" class="form-control" cols="30" rows="5" placeholder="Digite seu texto aqui"></textarea>
+                  <textarea type="texto" name="texto" id="user-text" class="form-control" cols="30" rows="5"
+                    placeholder="Digite seu texto aqui"></textarea>
                   <button type="submit" class="login-button">Enviar</button>
                 </form>
               </div>
             </section>
-      
-            
+
+
           </div>
         </article>
       </main>
-    
+
     </div>
   </div>
 </div>
