--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,15 @@
-<nav class="navbar navbar-expand-sm fixed-top">
+<nav class="navbar navbar-expand-md fixed-top">
     <img class="logo" src="https://i.imgur.com/6WIAE8r.png" alt="Logo Livraria Abraço">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
-        aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-        <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+        aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Alterna navegação">
+        <span class="navbar-toggler-icon"> <svg fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26 26"
+                width="26px" height="26px">
+                <path d="M 0 4 L 0 6 L 26 6 L 26 4 Z M 0 12 L 0 14 L 26 14 L 26 12 Z M 0 20 L 0 22 L 26 22 L 26 20 Z" />
+            </svg> </span>
     </button>
 
-    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-        <ul class="navbar-nav mr-auto">
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
                 <a class="nav-link" routerLink='/home'>HOME <span class="sr-only">(página atual)</span></a>
             </li>
@@ -29,6 +32,5 @@
                 <a class="nav-link" routerLink='/cadastro'>CADASTRO</a>
             </li>
         </ul>
-        </div>
+    </div>
 </nav>
-
