--- a/src/app/usernavbar/usernavbar.component.html
+++ b/src/app/usernavbar/usernavbar.component.html
@@ -1,8 +1,11 @@
-<nav class="navbar navbar-expand-sm fixed-top">
+<nav class="navbar navbar-expand-lg fixed-top">
     <img class="logo" src="https://i.imgur.com/6WIAE8r.png" alt="Logo Livraria Abraço">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
         aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"> <svg fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26 26"
+                width="26px" height="26px">
+                <path d="M 0 4 L 0 6 L 26 6 L 26 4 Z M 0 12 L 0 14 L 26 14 L 26 12 Z M 0 20 L 0 22 L 26 22 L 26 20 Z" />
+            </svg> </span>
     </button>
 
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
@@ -28,11 +31,12 @@
                 <p class="nav-link" routerLink='/login'>Olá, {{nome}}</p>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink='/login'><img src="https://i.imgur.com/pgNaLnn.png" alt="Icone Nova Categoria"></a>
+                <a class="nav-link" routerLink='/login'><img src="https://i.imgur.com/pgNaLnn.png"
+                        alt="Icone Nova Categoria"></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" (click)='sair()'><img src="https://i.imgur.com/A5TtITp.png" alt="Icone sair"></a>
             </li>
         </ul>
-        </div>
+    </div>
 </nav>
